--- a/client/.gitignore
+++ b/client/.gitignore
@@ -6,10 +6,13 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
 node_modules
+client/node_modules
+server/node_modules
 dist
 dist-ssr
+.env
+
 *.local
 
 # Editor directories and files
