--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT  = 4000
 
 MY_EMAIL = fayizpachu217@gmail.com
-MY_PASS = ddyr sfsd wkug iidq
+MY_PASS = lvyc aayk fbwm datc
 
-MONGO_URI = mongodb+srv://fayizpachu217:fayiz%4012345@cluster0.ng9unxj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI = mongodb+srv://fayizpachu217_db_user:fayispachuatlas@cluster0.2mu2rp4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
