added vercel.json file and edited vite config file

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT  = 4000
 
 MY_EMAIL = fayizpachu217@gmail.com
-MY_PASS = lvyc aayk fbwm datc
+MY_PASS = moos xaoz zdvi tbok
 
 MONGO_URI = mongodb+srv://fayizpachu217_db_user:fayispachuatlas@cluster0.2mu2rp4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
