--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "aos": "^2.3.4",
     "axios": "^1.11.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
